--- a/ReelHub.Website/appsettings.json
+++ b/ReelHub.Website/appsettings.json
@@ -5,5 +5,10 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    
+    "AllowedHosts": "*",
+    
+    "ConnectionStrings": {
+        "Database": "Server=(localdb)\\mssqllocaldb;Database=ReelHubDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
 }
